# crane_plus_arm

./: .gitignore  README.md
crane_plus_camera_calibration/: CMakeLists.txt  package.xml
crane_plus_camera_calibration/launch/: calibrate.launch
crane_plus_camera_calibration/src/: calibrate_camera_checkerboard.cpp  detect_calibration_pattern.cpp
crane_plus_description/: CMakeLists.txt  package.xml
crane_plus_description/meshes/: README  ax12_box.stl  f2.stl  f4.stl  f53.stl  finger_fixed.skp  finger_fixed.stl  finger_fixed_collision.skp  finger_fixed_collision.stl  finger_moving.skp  finger_moving.stl  finger_moving_collision.skp  finger_moving_collision.stl  mount.skp  mount.stl
crane_plus_description/urdf/: crane_plus.urdf  crane_plus.urdf.xacro  crane_plus.xacro  crane_plus_hardware.xacro
crane_plus_gripper/: CMakeLists.txt  package.xml
crane_plus_gripper/script/: command_gripper.py
crane_plus_gripper/src/: gripper_controller.py
crane_plus_hardware/: CMakeLists.txt  package.xml
crane_plus_hardware/config/: arm_joint_trajectory_controller.yaml  controller_manager.yaml  joints_trajectory_controller.yaml  servo_controllers.yaml  visualization.rviz
crane_plus_hardware/launch/: start_arm.launch  start_arm_standalone.launch
crane_plus_hardware/script/: set_arm_torque
crane_plus_hardware/urdf/: crane_plus.urdf.xacro
crane_plus_ikfast_arm_plugin/: CMakeLists.txt  crane_plus_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
crane_plus_ikfast_arm_plugin/src/: crane_plus_arm_ikfast_moveit_plugin.cpp  crane_plus_arm_ikfast_solver.cpp
crane_plus_joint_state_publisher/: CMakeLists.txt  package.xml
crane_plus_joint_state_publisher/config/: servo_controller_names.yaml
crane_plus_joint_state_publisher/src/: crane_plus_joint_state_publisher.py
crane_plus_move_to_pose/: CMakeLists.txt  package.xml
crane_plus_move_to_pose/script/: move_to_pose.py
crane_plus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crane_plus_moveit_config/config/: controller.yaml  controllers.yaml  crane_plus.srdf  crane_plus_arm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
crane_plus_moveit_config/launch/: crane_plus_arm_moveit_controller_manager.launch.xml  crane_plus_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
crane_plus_simulation/: CMakeLists.txt  package.xml
crane_plus_simulation/config/: crane_plus.yaml  crane_plus_arm.yaml  crane_plus_arm_controller.yaml  crane_plus_controller.yaml  visualisation.rviz
crane_plus_simulation/launch/: simulation.launch
crane_plus_simulation/urdf/: simulated_crane_plus.urdf  simulated_crane_plus.urdf.xacro
