<package>
  <name>crane_plus_camera_calibration</name>
  <version>0.1.0</version>
  <description>
    Contains a node that calibrates the position of a camera relative to the
    CRANE+ arm. This is a minor modfication and clean-up of the
    turtlebot_arm_kinect_calibration package.
  </description>
  <author>Michael Ferguson</author>
  <author>Helen Oleynikova</author>
  <author>Geoffrey Biggs</author>
  <maintainer email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</maintainer>
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot_arm_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
