<package>
  <name>crane_plus_description</name>
  <version>0.1.0</version>
  <description>
    crane_plus_description contains URDF files and meshes for the Crane+ arm.
    Based on the turtlebot_arm_description package.
  </description>
  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <author>Geoffrey Biggs</author>
  <maintainer email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</maintainer>
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot_arm_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
