<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>crane_plus_ikfast_arm_plugin</name>
  <version>0.1.0</version>
  <description>
    The IKFast plugin for using the CRANE+ manipulator with MoveIt!.
  </description>
  <author>Geoffrey Biggs</author>
  <maintainer email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/crane_plus_ikfast_arm_plugin</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>liblapack-dev</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/crane_plus_arm_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
