<package>
  <name>crane_plus_move_to_pose</name>
  <version>0.1.0</version>
  <description>
    Provides a simple utility to move the end effector to a provided pose.
  </description>
  <author>Geoffrey Biggs</author>
  <maintainer email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</maintainer>
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot_arm_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
</package>
